<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/myPrimary"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/image_view_circular_bg"
        android:backgroundTint="@android:color/holo_red_dark"
        android:src="@drawable/right"
        android:id="@+id/headerLayoutArrowImg"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:tint="@color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:text="@string/giris_yap"
        android:textColor="@color/solidBlack"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/headerLayoutArrowImg"
        app:layout_constraintStart_toEndOf="@id/headerLayoutArrowImg"
        app:layout_constraintTop_toTopOf="@id/headerLayoutArrowImg" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/settings"
        app:tint="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        />
    
    <LinearLayout
        android:layout_width="0dp"
        android:id="@+id/linear1"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toEndOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/headerLayoutArrowImg"
        android:layout_marginTop="50dp"
        android:weightSum="10"
        android:layout_marginStart="20dp"
        >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd"
                android:textSize="12sp"
                android:id="@+id/usdText"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18,829"
                android:textColor="#00CA1D"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="9"
            android:gravity="end"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ISTANBUL"
                android:textSize="12sp"
                android:id="@+id/countryText"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2\u2103"
                android:textColor="@color/solidBlack"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
        
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/selectable_white_bg"
        android:layout_marginTop="50dp"
        android:id="@+id/constraint1"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        android:layout_height="60dp"
       >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/t_m"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:id="@+id/tümüText"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:id="@+id/filterImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline6"
            app:layout_constraintTop_toTopOf="@id/tümüText"
            android:src="@drawable/baseline_filter_list_24"
            android:layout_gravity="end"
            app:tint="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/selectable_white_bg"        android:layout_marginTop="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/constraint1"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_currency_bitcoin_24"
            app:tint="@color/black"
            android:layout_marginStart="20dp"
            android:id="@+id/bitcoinImg"
            app:layout_constraintStart_toStartOf="@id/guideline7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kripto_pa"
            android:textColor="@color/black"
            android:id="@+id/kriptoTxt"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/bitcoinImg"
            android:layout_marginStart="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/selectable_white_bg"        android:layout_marginTop="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kaynak_ekle"
            android:textColor="@color/black"
            android:id="@+id/kaynakText"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />
    
    
  

</androidx.constraintlayout.widget.ConstraintLayout>